# Production-RAG-Backend

./: .dockerignore  .gitignore  Dockerfile  Procfile  bm25_index.pkl  logs.txt  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/api/: main.py  main_old.py  routes.py
src/ask_my_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/generation/: answer_model.py  generator.py  prompt_builder.py
src/ingestion/: chunker.py  embedder.py  indexer.py
src/reranking/: reranker.py
src/retrieval/: bm25_retriever.py  hybrid.py  vector_retriever.py
src/tasks/: workers_rq.py
tests/: test_chunker.py  test_citation_validator.py  test_rrf.py
